<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zyloushi.zyls.rmcard.queryResultActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/holo_blue_dark"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/house_detail_topTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/query_result"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/login_select"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/my_fjk_title"
        android:layout_below="@+id/relativeLayout"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:src="@mipmap/my_zyloushi" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView1"
            android:layout_toRightOf="@+id/imageView1"
            android:text="￥"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView1"
            android:layout_alignBottom="@+id/textView1"
            android:layout_toRightOf="@+id/textView1"
            android:text="****"
            android:textColor="@android:color/white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/price"
            android:layout_alignBottom="@+id/price"
            android:layout_toRightOf="@+id/price"
            android:text="元"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/imageView1"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="中原楼市购房"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignRight="@+id/textView4"
            android:text="代金劵"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/buy_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/buy_time"
            android:layout_alignBottom="@+id/buy_time"
            android:layout_toRightOf="@+id/buy_time"
            android:text="" />

        <TextView
            android:id="@+id/to_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/buy_date"
            android:layout_toLeftOf="@+id/textView5"
            android:text="有效日期:" />

        <TextView
            android:id="@+id/to_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/to_time"
            android:layout_alignLeft="@+id/textView4"
            android:text="" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/buy_time"
            android:layout_below="@+id/buy_time"
            android:paddingTop="8dp"
            android:text="编号:" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView10"
            android:layout_toRightOf="@+id/textView10"
            android:text="" />

        <TextView
            android:id="@+id/buy_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageView1"
            android:layout_below="@+id/price"
            android:layout_marginTop="20dp"
            android:text="购买日期:" />
    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use"
        android:id="@+id/use"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_select"
        android:textColor="@android:color/white"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>
    <include layout="@layout/progress"></include>
</RelativeLayout>
